# exam-ticket-gen

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: app.py  base_pdf.html  main.py
src/components/authentication/: jwt.py  methods.py
src/components/module/: methods.py  schemas.py
src/components/question/: methods.py  schemas.py
src/components/role/: methods.py  schemas.py
src/components/subject/: methods.py  schemas.py
src/components/ticket/: methods.py  schemas.py
src/components/user/: methods.py  schemas.py
src/frontend/templates/: detail.html  index.html  login.html  module.html  register.html
src/models/: __init__.py  base.py  module.py  question.py  question_module.py  role.py  subject.py  ticket.py  ticket_question.py  user.py
src/settings/: async_postgres_settings.py  postgres_settings.py
src/views/: module.py  question.py  subject.py  ticket.py  user.py
