[tool.poetry]
name = "exam-ticket-gen"
version = "0.1.0"
description = ""
authors = ["NeverEverLive <nevereverlives@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.4"
pydantic = "^1.10.5"
fastapi = {extras = ["all"], version = "^0.92.0"}
psycopg2-binary = "^2.9.5"
bcrypt = "^4.0.1"
pyjwt = "^2.6.0"
asyncpg = "^0.27.0"
greenlet = "^2.0.2"
pdfkit = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
